--- a/science-course.html
+++ b/science-course.html
@@ -169,7 +169,7 @@ header { position: fixed; top: 20px; left: 50%; transform: translateX(-50%); wid
                 <div id="curriculum" class="tab-content active">
                     <div class="video-section reveal">
                         <div class="video-player glass">
-                            <img src="https://via.placeholder.com/1280x720.png?text=Video+Thumbnail" alt="الدرس الأول">
+                            <img src="https://youtu.be/kOGXHnTr3BY?t" alt="الدرس الأول">
                             <div class="play-button"><i class="fas fa-play"></i></div>
                         </div>
                         <div class="video-info glass-card">
