--- a/science-course.html
+++ b/science-course.html
@@ -240,7 +240,7 @@ header { position: fixed; top: 20px; left: 50%; transform: translateX(-50%); wid
                 <div id="instructor" class="tab-content">
                     <div class="info-box reveal" style="text-align: center;">
                         <div class="instructor-img" style="width: 150px; height: 150px; margin: 0 auto 20px;">
-                            <img src="https://via.placeholder.com/150x150.png?text=Teacher" alt="الأستاذ إبراهيم شكري">
+                            <img src="mr.ebrahem.com" alt="الأستاذ إبراهيم شكري">
                         </div>
                         <h3 style="font-size: 1.8rem; margin-bottom: 10px;">الأستاذ إبراهيم شكري</h3>
                         <p style="color: var(--accent-blue); margin-bottom: 20px;">مدرس العلوم والأحياء</p>
