--- a/index.html
+++ b/index.html
@@ -226,9 +226,9 @@ header { position: fixed; top: 20px; left: 50%; transform: translateX(-50%); wid
                 <div class="logo" style="margin-bottom: 20px;"><i class="fas fa-atom"></i> أ/ إبراهيم شكري</div>
                 <p>منصة تعليمية متطورة تهدف إلى رفع مستوى التعليم في مصر.</p>
                 <div class="social-links">
-                    <a href="#"><i class="fab fa-facebook-f"></i></a>
-                    <a href="#"><i class="fab fa-youtube"></i></a>
-                    <a href="#"><i class="fab fa-whatsapp"></i></a>                    <a href="#"><i class="fab fa-telegram"></i></a>
+                    <a href="https://www.facebook.com/profile.php?id=100079903027831&locale=ar_AR"><i class="fab fa-facebook-f"></i></a>
+                    <a href="https://m.youtube.com/@Biologybbsata"><i class="fab fa-youtube"></i></a>
+                    <a href="https://whatsapp.com/channel/0029Vb6sMhmLikgD9Ri8IM3o"><i class="fab fa-whatsapp"></i></a>                    <a href="https://t.me/+wUqRl8c8-ow0MWFk"><i class="fab fa-telegram"></i></a>
                 </div>
             </div>
             <div class="footer-col">
